--- a/src/Components/MonthDaysGrid.module.scss
+++ b/src/Components/MonthDaysGrid.module.scss
@@ -23,6 +23,10 @@
     color: $gray-500;
   }
 
+  &.NoShowMonth {
+    visibility: hidden;
+  }
+
   &.Today {
     background-color: $primary-color-light;
     border-radius: 50%;
