--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
-$gray-300: #cccccc;
-$gray-500: #999999;
+$gray-300: #ccc;
+$gray-500: #999;
 $primary-color: #4484c7;
 $primary-color-light: #ededed;
 $cell-spacing: 2px;
