--- a/src/Components/MonthDaysGrid.module.scss
+++ b/src/Components/MonthDaysGrid.module.scss
@@ -32,7 +32,7 @@
   box-sizing: border-box;
   cursor: pointer;
   flex: 1 1 auto;
-  font-size: 0.7rem;
+  font-size: 14px;
   height: $cell-size;
   line-height: $cell-size;
   margin: 0 $cell-spacing $cell-spacing * 2 $cell-spacing;
