--- a/src/Components/RangePresets.module.scss
+++ b/src/Components/RangePresets.module.scss
@@ -3,15 +3,15 @@
 .RangePresets {
   display: flex;
   flex-direction: column;
-  padding: 0 0.5rem;
-  margin-top: 3rem;
+  padding: 0 8px;
+  margin-top: 42px;
 }
 
 .RangePreset {
   width: min-content;
-  padding: 0.4rem 0.8rem;
+  padding: 6px 12px;
   white-space: nowrap;
-  border-radius: 1rem;
+  border-radius: 14px;
   cursor: pointer;
 
   &:hover {
