--- a/src/Components/TimeSelector.module.scss
+++ b/src/Components/TimeSelector.module.scss
@@ -1,29 +1,29 @@
 @import "../variables";
 
 .TimeSelector {
-  width: calc(100% - 1.6rem);
+  width: calc(100% - 22px);
   display: flex;
   flex-direction: column;
-  padding-top: 0.5rem;
-  margin: 0 0.8rem;
+  padding-top: 8px;
+  margin: 0 12px;
 }
 
 .TimeSelectorInputs {
-  margin-bottom: 0.5rem;
+  margin-bottom: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
 
   > div {
-    margin: 0 0.3rem;
+    margin: 0 4px;
   }
 
   input {
     width: 100%;
-    height: 2rem;
-    line-height: 2rem;
+    height: 28px;
+    line-height: 28px;
     border-radius: 4px;
-    padding: 0 0.1rem 0 0.3rem;
+    padding: 0 2px 0 4px;
     border: 1px solid $gray-300;
   }
 }
